<resources>
  <string name="app_name">DC Cast</string>
  <string name="default_notification_channel_id">dc_cast_notification_id</string>
  <string name="twitter_callback">https://www.dcinside.com</string>
  <string name="twitter_consumer_key">2yGo37vnFIC6YWA7jRDTbAQHf</string>
  <string name="twitter_consumer_secret">aAHtXzkdn4qfl3UfrEf2dS7RJfH5loFbEefJtLpOSFCvEsEGaU</string>
  <string name="twitter_oauth_verifier">oauth_verifier</string>
  <string name="url_privacy">https://nstatic.dcinside.com/dc/m/policy/privacy.html</string>
  <string name="url_policy">https://nstatic.dcinside.com/dc/m/policy/policy.html</string>
  <string name="kakao_app_key">7a38c4c26f38e8de7b5ce694cc88829c</string>
  <string name="kakao_scheme">kakao7a38c4c26f38e8de7b5ce694cc88829c</string>
  <string name="kakaolink_host">kakaolink</string>
  <string name="facebook_app_id">391686478328052</string>
  <string name="toolbar_menu_search">search</string>
  <string name="tab_live">Live</string>
  <string name="tab_vod">VOD</string>
  <string name="left_menu_username">사용자명</string>
  <string name="left_menu_title_0">홈</string>
  <string name="left_menu_title_1">My 콘텐츠</string>
  <string name="left_menu_title_2">Live 하기</string>
  <string name="left_menu_title_3">VOD 등록</string>
  <string name="left_menu_title_4">즐겨찾기</string>
  <string name="left_menu_title_5">캐스트라인</string>
  <string name="header_live">인기 LIVE</string>
  <string name="bottom_sheet_title_buuz">만두 선물하기</string>
  <string name="dumpling_field_title">만두 갯수</string>
  <string name="hint_search">검색</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="btn_send_gifts">만두 전송</string>
  <string name="btn_see_all"><![CDATA[전체보기 >]]></string>
  <string name="login_username_hint">사용자명</string>
  <string name="login_password_hint">비밀번호</string>
  <string name="login_button">로그인</string>
  <string name="login_forget_password">비밀번호 찾기</string>
  <string name="login_register">회원가입</string>
  <string name="login_required">먼저 로그인 하십시오</string>
  <string name="activity_forget_password">비밀번호 찾기</string>
  <string name="activity_sign_up">회원가입</string>
  <string name="activity_settings">설정</string>
  <string name="settings_live_settings">설정</string>
  <string name="settings_user_center">고객센터</string>
  <string name="settings_terms_of_condition">약관 및 정책</string>
  <string name="activity_set_pass_code">비밀번호 입력</string>
  <string name="activity_enter_pass_code">비밀번호 입력</string>
  <string name="settings_verified_success">잠금 설정이 되었습니다</string>
  <string name="verify_set_lock_password">잠금 설정이 확인되었습니다</string>
  <string name="settings_history_information"><![CDATA[기록 및 개인정보]]></string>
  <string name="settings_auto_login">자동로그인</string>
  <string name="settings_mobile_data_description">3G/LTE등 모바일 데이터로 Live 하기/보기, VOD 등록 /보기를 할 경우 알림
    제공
  </string>
  <string name="settings_mobile_data">모바일 데이터 사용 제한</string>
  <string name="settings_mobile_data_on">모바일 데이터 사용 제한 되었습니다. WiFi 에서만 자동 재생됩니다.</string>
  <string name="settings_mobile_data_off">모바일 데이터 사용 제한이 해제되었습니다. 3G/LTE/WiFi 에서 자동 재생 됩니다.</string>
  <string name="settings_auto_login_on">자동 로그인</string>
  <string name="settings_auto_login_off">자동 로그인</string>
  <string name="settings_notification_settings">알림 설정</string>
  <string name="settings_security_lock">암호 잠금</string>
  <string name="settings_information">서비스 문의</string>
  <string name="settings_item_version">버전 (%1$s)</string>
  <string name="settings_privacy">개인정보처리방침</string>
  <string name="settings_license">라이선스</string>
  <string name="settings_log_out">로그아웃</string>
  <string name="settings_all_notification">전체 알림</string>
  <string name="settings_live_notification">Live 알림</string>
  <string name="settings_vod_notification">VOD 알림</string>
  <string name="settings_chat_notification">Chat 알림</string>
  <string name="logout_confirm_title">로그아웃</string>
  <string name="logout_confirm_body">로그아웃 하시겠습니까?</string>
  <string name="logout_confirm_yes">확인</string>
  <string name="logout_confirm_no">취소</string>
  <string name="activity_notification_settings">알림 설정</string>
  <string name="clear_live_history_title">Live 최근 보기 기록 지우기</string>
  <string name="clear_live_history_body">Live 보기 기록 삭제하시겠습니까?</string>
  <string name="clear_live_history_yes">확인</string>
  <string name="clear_live_history_no">취소</string>
  <string name="clear_vod_history_title">VOD 최근 보기 기록 지우기</string>
  <string name="clear_vod_history_body">VOD 최근 보기 기록 삭제하겠습니까?</string>
  <string name="clear_vod_history_yes">확인</string>
  <string name="clear_vod_history_no">취소</string>
  <string name="clear_search_history_title">검색 기록 삭제</string>
  <string name="clear_search_history_body">최근 보기 검색기록 삭제하시겠습니까?</string>
  <string name="clear_search_history_yes">확인</string>
  <string name="clear_search_history_no">취소</string>
  <string name="activity_history_information">기록 및 개인정보</string>
  <string name="history_clear_live_history">Live 최근 보기 기록 지우기</string>
  <string name="history_clear_vod_history">VOD 최근 보기 기록 지우기</string>
  <string name="history_clear_search_history">검색 기록 삭제</string>
  <string name="history_stop_recent_view">최근 보기 중지</string>
  <string name="history_stop_recent_history">최근 보기 기록 일시 중지</string>
  <string name="live_history_cleared">Live 최근 보기 기록이 삭제 되었습니다</string>
  <string name="vod_history_cleared">VOD 최근 보기 기록이 삭제 되었습니다</string>
  <string name="search_history_cleared">최근 검색 기록이 삭제 되었습니다</string>
  <string name="activity_notification">알림</string>
  <string name="notification_tab_notice">공지 사항</string>
  <string name="notification_tab_live">Live</string>
  <string name="notification_tab_vod">VOD</string>
  <string name="notification_live_title_html">
    <![CDATA[<big><b><font color=#353945>%1$s</font></b></big> <font color=#353945>just starting a new live</font> <font color=#999BA1>%2$s people watching</font>]]></string>
  <string name="notification_notice_title_html">
    <![CDATA[<big><b><font color=#353945>%1$s</font></b></big> <font color=#999BA1>share VOD for you</font> <font color=#999BA1>6h</font>]]></string>
  <string name="notification_notice_check_html">
    <![CDATA[<big><b><font color=#353945>%1$s</font></b></big> <font color=#999BA1> it\'s almost time to reward to rewind 12.17.18</font> <font color=#999BA1>6h</font>]]></string>
  <string name="notification_vod_title_html">
    <![CDATA[<big><b><font color=#353945>%1$s</font></b></big> <font color=#353945>just posted a new video</font> <font color=#999BA1>6h</font>]]></string>
  <string name="activity_favorite">즐겨찾기</string>
  <string name="favorite_video_count">즐겨찾기 (%1$d)</string>
  <string name="activity_my_content">My 콘텐츠</string>
  <string name="my_content_channel">내 채널</string>
  <string name="my_content_favorite">즐겨찾기</string>
  <string name="my_content_subscribe">구독</string>
  <string name="my_content_recent">최근 본 Live/VOD</string>
  <string name="activity_my_channel">내 채널</string>
  <string name="my_channel_tab_home">홈</string>
  <string name="my_channel_tab_live">라이브</string>
  <string name="my_channel_tab_vod">VOD</string>
  <string name="my_channel_subscribe">구독</string>
  <string name="my_channel_followers">팔로워</string>
  <string name="my_channel_following">팔로잉</string>
  <string name="my_channel_sort_recent">최근</string>
  <string name="my_channel_sort_favorite">즐겨찾기</string>
  <string name="my_channel_sort_title">이름</string>
  <string name="my_channel_sort_views">조회수</string>
  <string name="activity_recent">최근 본 Live/VOD</string>
  <string name="recent_tab_live">Live</string>
  <string name="recent_tab_vod">VOD</string>
  <string name="activity_subscribe">구독</string>
  <string name="subscriptions_count">구독자 %1$d</string>
  <string name="subscriptions_stat">구독자 %1$s</string>
  <string name="subscribe_sort_recent">최근</string>
  <string name="subscribe_sort_on_air">방송중</string>
  <string name="subscribe_sort_title">이름</string>
  <string name="sort_title">정렬:</string>
  <string name="fragment_cast_list">캐스트 리스트</string>
  <string name="cast_list_tab_followers">팔로워</string>
  <string name="cast_list_tab_following">팔로잉</string>
  <string name="cast_list_tab_friends">친구</string>
  <string name="cast_list_tab_groups">그룹</string>
  <string name="cast_list_following">팔로잉</string>
  <string name="cast_list_following_no_data">닉네임/ID로 검색으로 팔로우 할 수 있습니다</string>
  <string name="cast_list_follow">팔로우</string>
  <string name="cast_list_add_friend">친구추가</string>
  <string name="cast_list_confirm">확인</string>
  <string name="followers_count">팔로워 (%1$s)</string>
  <string name="following_count">팔로잉 (%1$s)</string>
  <string name="unfollowing_count">언팔로잉 (%1$s)</string>
  <string name="friends_count">내 친구 (%1$s)</string>
  <string name="recent_followers">최근 팔로워</string>
  <string name="my_live_history">나의 live 기록 (%1$s)</string>
  <string name="activity_my_live_history">나의 live 기록</string>
  <string name="recent_friend">친구</string>
  <string name="groups_count">그룹 (%1$s)</string>
  <string name="own_groups_count">개인 그룹 (%1$s)</string>
  <string name="vod_count">최신 VOD (%1$d)</string>
  <string name="channel_live_video">진행중인 Live가 없습니다.</string>
  <string name="activity_user_follow">팔로우</string>
  <string name="search_user_cancel">취소</string>
  <string name="activity_search_followers">팔로워 검색</string>
  <string name="activity_search_groups">그룹 검색</string>
  <string name="activity_search_friend">친구 찾기</string>
  <string name="search_friend_request">요청 (%1$d)</string>
  <string name="search_friend_result">Result (%1$d)</string>
  <string name="add_friend_search_no_data">닉네임/ID 를 입력해주세요</string>
  <string name="activity_add_friend">요청</string>
  <string name="add_friend_request">요청</string>
  <string name="add_friend_confirm">확인</string>
  <string name="add_friend_friends">친구</string>
  <string name="add_friend_add_friend">친구 추가</string>
  <string name="add_friend_request_sent">my 친구</string>
  <string name="activity_create_group">그룹 만들기</string>
  <string name="activity_update_group">업데이트 그룹</string>
  <string name="group_detail_save">저장</string>
  <string name="vod_report_title">VOD 신고하기</string>
  <string name="vod_report_1">광고 신고</string>
  <string name="vod_report_2">음란물 신고</string>
  <string name="vod_report_3">욕설/비방 신고</string>
  <string name="vod_report_4">기타 내용 신고</string>
  <string name="vod_report_cancel">취 소</string>
  <string name="vod_report_send">확 인</string>
  <string name="live_settings_live_distribute">Live 배포 범위</string>
  <string name="live_settings_live_title">Live 제목</string>
  <string name="live_settings_live_type">Live 진행 방법</string>
  <string name="item_live_type_camera">카메라</string>
  <string name="live_settings_category_setting">카테고리 설정</string>
  <string name="live_settings_set_lock">잠금 설정</string>
  <string name="live_settings_broadcast_orientation">화면 회전 설정</string>
  <string name="live_settings_broadcast_quality">방송화질</string>
  <string name="live_settings_restricted">19금 설정</string>
  <string name="live_settings_chat_lock">채팅 잠금</string>
  <string name="live_settings_live_lock">Live 잠금</string>
  <string name="broadcast_portrait">세로 방향</string>
  <string name="broadcast_high_quality">고화질</string>
  <string name="item_distribute_subscriber">구독자</string>
  <string name="live_settings_start_live">Live 시작하기</string>
  <string name="validate_live_category">카테고리를 입력해 주세요.</string>
  <string name="live_change_nickname">닉네임 변경</string>
  <string name="live_change_nickname_hint">닉네임</string>
  <string name="live_change_nickname_body">한글 ?글자까지 닉네임으로 사용할 수 있습니다.</string>
  <string name="change_nickname_not_verified">이미 사용 중인 닉네임 입니다</string>
  <string name="change_nickname_check">검사</string>
  <string name="change_nickname_yes">확인</string>
  <string name="change_nickname_no">취소</string>
  <string name="mandu_password_title">만두 전송을 위해 비밀번호를 다시 한번 입력해 주세요.</string>
  <string name="mandu_cancel">취소</string>
  <string name="mandu_send">전송</string>
  <string name="vod_report_detail_hint">자세한 산고 내용을 입력해 주세요.</string>
</resources>