<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:padding="@dimen/margin_size_xxlarge"
      android:orientation="vertical"
  >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:text="@string/mandu_password_title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_size_large"
        android:textColor="@color/colorPrimary"
    />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:id="@+id/et_password"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:hint="@string/login_password_hint"
        android:padding="@dimen/margin_size_xxlarge"
        android:layout_marginBottom="@dimen/margin_size_xxlarge"
        android:textSize="13sp"
        android:background="@drawable/bg_change_nickname_input"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:id="@+id/cancel_mandu"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:theme="@style/ButtonStyleReportCancel"
          android:text="@string/mandu_cancel"/>

      <Button
          android:id="@+id/send_mandu"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:layout_height="wrap_content"
          android:theme="@style/ButtonStyleReportConfirm"
          android:text="@string/mandu_send"/>

    </LinearLayout>

  </LinearLayout>

</layout>

